@@ -13,6 +13,10 @@ const _Bool foo[4] = {1, 2, 3, 4};          //creates an array of 4 _Bools which
 
 void testBug(void)
 {
+/* Test fails on big endian hosts that use a _Bool larger than char */
+/* (for example, Mac PPC), so just skip this test for non-SDCC */
+#if !defined(SDCC)
   ASSERT(1 == *(char*)(&foo[1]));
   ASSERT(1 == *(char*)(&bar[2]));
+#endif
 }
